apply plugin: 'groovy'

ext {
    kitDescription = 'mParticle Gradle Plugin for creating mParticle kits'
}

apply from: '../scripts/maven.gradle'

dependencies {
    implementation gradleApi()
    implementation localGroovy()
    compileOnly "com.android.tools.build:gradle:$gradle_version"
    testImplementation "com.android.tools.build:gradle:$gradle_version"
}

compileGroovy {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

dependencies {
    testImplementation 'junit:junit:4.13.2'
}

tasks.withType(Test) {
    jvmArgs('--add-opens=java.base/java.lang=ALL-UNNAMED')
}

task generateJavadocsJar(type: Jar, dependsOn: groovydoc) {
    archiveClassifier.set("javadoc")
    from groovydoc.destinationDir
}

task generateSourcesJar(type: Jar) {
    archiveClassifier.set("sources")
    from sourceSets.main.java.srcDirs
}
